--- a/sunset-courier-services/src/index.html
+++ b/sunset-courier-services/src/index.html
@@ -8,8 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/b9f4e5e569.js" crossorigin="anonymous"></script>
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root>
+    
+  </app-root>
 </body>
 </html>
