1. Added services image. 2. Restyled services page. 3. Reinstated paged site and menu to reflect changes.

--- a/sunset-courier-services/src/index.html
+++ b/sunset-courier-services/src/index.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/b9f4e5e569.js"
       crossorigin="anonymous"
